--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2327,6 +2327,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 122,
+   "id": "ccbf2749",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(scaler,open('scaling.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 90,
    "id": "6ae1935d",
    "metadata": {},
